--- a/task_manager/tasks/templates/tasks/task_form.html
+++ b/task_manager/tasks/templates/tasks/task_form.html
@@ -1,12 +1,36 @@
 {% extends "base.html" %}
 
-{% block title %}Criar Nova Tarefa{% endblock %}
+{% block title %}{% if is_update %}Editar Tarefa{% else %}Criar Nova Tarefa{% endif %}{% endblock %}
 
 {% block content %}
 <h1>{% if is_update %}Editar Tarefa{% else %}Criar Nova Tarefa{% endif %}</h1>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    
+    <div>
+        <label for="id_title">Título:</label>
+        {{ form.title }}
+        {% if form.title.errors %}
+            <p>{{ form.title.errors }}</p>
+        {% endif %}
+    </div>
+
+    <div>
+        <label for="id_description">Descrição:</label>
+        {{ form.description }}
+        {% if form.description.errors %}
+            <p>{{ form.description.errors }}</p>
+        {% endif %}
+    </div>
+
+    <div>
+        <label for="id_due_date">Prazo:</label>
+        {{ form.due_date }}
+        {% if form.due_date.errors %}
+            <p>{{ form.due_date.errors }}</p>
+        {% endif %}
+    </div>
+    
     <button type="submit" class="btn btn-primary">
         {% if is_update %}Atualizar{% else %}Salvar{% endif %}
     </button>
